Changing color palet

--- a/src/scss/Style.scss
+++ b/src/scss/Style.scss
@@ -1,7 +1,7 @@
-$color-1: #219BFF; // Nav blue
-$color-2: #244B6B; // dark blue
+$color-1: #56A3A6; // Nav blue
+$color-2: #1E352F; // dark blue
 $color-4: #ffffff; // white
-$color-5: #51687A; // Font grey
+$color-5: #335145; // Font grey
 
 body {
     margin: 0;
