--- a/src/scss/Style.css
+++ b/src/scss/Style.css
@@ -3,16 +3,16 @@ body {
 
 a {
   text-decoration: underline;
-  color: #244B6B; }
+  color: #1E352F; }
 
 h1, h2, h3, h4 {
-  color: #244B6B; }
+  color: #1E352F; }
 
 a:hover {
-  color: #219BFF; }
+  color: #56A3A6; }
 
 p {
-  color: #51687A; }
+  color: #335145; }
 
 .wrap {
   min-height: 100vh;
@@ -29,7 +29,7 @@ p {
 
 .navBar, .footerBar {
   margin-top: 0;
-  background-color: #219BFF;
+  background-color: #56A3A6;
   padding: 10px; }
   .navBar a, .footerBar a {
     text-decoration: none;
@@ -39,13 +39,13 @@ p {
     padding: 5px; }
   .navBar a:hover, .footerBar a:hover {
     background-color: #ffffff;
-    color: #219BFF; }
+    color: #56A3A6; }
 
 .sec-1 h1 {
   margin-bottom: 0px;
   margin-top: 5px; }
 .sec-1 h1#link:hover {
-  color: #219BFF; }
+  color: #56A3A6; }
 .sec-1 h5 {
   margin-top: 3px;
   margin-bottom: 0px; }
@@ -53,7 +53,7 @@ p {
   margin-bottom: 0px;
   margin-top: 5px; }
 .sec-1 li {
-  color: #51687A; }
+  color: #335145; }
 
 .footerBar {
   margin-bottom: 0; }
@@ -73,11 +73,11 @@ p {
 
 .part-2 button {
   color: #ffffff;
-  background-color: #219BFF;
+  background-color: #56A3A6;
   border-radius: 5px; }
 
 .part-2 button:hover {
-  color: #219BFF;
+  color: #56A3A6;
   background-color: #ffffff; }
 
 #story_editor {
